unpackaged/main/default/objects/fferpcore__MessageType__c/fields/fferpcore__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DeveloperName__c</fullName>
    <inlineHelpText>The unique identifier for the message type. Can be used to quickly create a tree of multiple message types.</inlineHelpText>
    <label>Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>