unpackaged/main/default/objects/fferpcore__MessageType__c/fields/fferpcore__ExpiryCutoff__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ExpiryCutoff__c</fullName>
    <label>Archive Cutoff</label>
    <type>DateTime</type>
</CustomField>