unpackaged/main/default/objects/fferpcore__MessageType__c/fields/fferpcore__StorageExpiry__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StorageExpiry__c</fullName>
    <label>Message Retention</label>
    <length>10</length>
    <type>Text</type>
</CustomField>